# python-kata-base

./: .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_canary.py
